--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,10 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.3.1"
+    "mongoose": "^8.3.1",
+    "router": "^1.3.8"
   }
 }
