--- a/myapp/package.json
+++ b/myapp/package.json
@@ -1,7 +1,6 @@
 {
   "name": "myapp",
   "version": "0.1.0",
- 
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -9,8 +8,10 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "html2canvas": "^1.4.1",
-    "react": "^18.2.0",
+    "icons": "^1.0.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
