--- a/myapp/.env
+++ b/myapp/.env
@@ -1,2 +1,2 @@
-REACT_APP_PORT= http://localhost:8000
-PORT1=https://pathforge.onrender.com
+REACT_APP_PORT=https://pathforge.onrender.com
+PORT1=http://localhost:8000
